Widgets: Do not include qundogroup.h, qundostack.h in QtWidgets header

The headers are already included in QtGui/QtGui. This also fixes
an issue when compiling with the respective features disabled.

Fixes: QTBUG-100290
Change-Id: I5e7c6578952535315bacde218a26d2133c486b2c
Reviewed-by: Jörg Bornemann <joerg.bornemann@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 604ace00957d7dfd8029932c529a59810485163e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>